<resources>
    <string name="app_name">Final certification</string>
    <string name="poemPushkinAS">А. С. Пушкин\n
        «Буря»\n
Ты видел деву на скале\n
В одежде белой над волнами\n
Когда, бушуя в бурной мгле,\n
Играло море с берегами,\n
Когда луч молний озарял\n
Ее всечасно блеском алым\n
И ветер бился и летал\n
С ее летучим покрывалом?\n
Прекрасно море в бурной мгле\n
И небо в блесках без лазури;\n
Но верь мне: дева на скале\n
Прекрасней волн, небес и бури.\n
</string>
    <string name="button_Literature">Литература</string>
    <string name="button_Russian_language">Русский языл</string>
    <string name="button_Mathematics">Математика</string>
    <string name="button_Geography">География</string>
    <string name="button_English_language">Английский язык</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>